# SparkleAndroid

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.py
build_system/android/app/: build.gradle
libraries/include/core/: GlobalMacro.h
libraries/include/renderer/proxy/: BoxRenderProxy.h  LensRenderProxy.h
libraries/include/scene/: SceneManager.h
libraries/include/scene/component/primitive/: BoxPrimitive.h  LensPrimitive.h
libraries/source/application/: AppFramework.cpp
libraries/source/core/: Exception.cpp
libraries/source/platform/android/: AndroidThreadUtils.cpp
libraries/source/renderer/proxy/: BoxRenderProxy.cpp  LensRenderProxy.cpp
libraries/source/rhi/: RHI.cpp
libraries/source/scene/: SceneManager.cpp
libraries/source/scene/component/primitive/: BoxPrimitive.cpp  LensPrimitive.cpp
resources/: .gitignore
resources/packed/config/: config.json
resources/packed/models/BoomBox/: BoomBox.gltf
resources/packed/models/CornellBox/: CornellBox.usda
resources/packed/models/Suzanne/: Suzanne.gltf
resources/packed/models/Test/: BackGround.glb  BackGround.gltf  Buttons.gltf
resources/packed/models/WaterBottle/: WaterBottle.gltf
shaders/: CMakeLists.txt
shaders/ray_trace/: ray_trace.cs.slang
